1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (SUPPORTLDFLAGS): Move FFILDFLAGS and HDF5FLAGS
	before the others, as they are more likely to be non-default.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (_SWARMLIBS): New variable for just the
	module libraries.
	(SWARMLIBS): Use it, adding $(JAVASWARMLIBS).

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (swarm_JAVASWARMLIBS): Substitute JAVASWARMLIBS.
	(SWARM_LDADD): Use it.

	* Makefile.tests.in (JAVASWARMLIBS): Substitute.
	(LIBS): Use it.
	(javaswarmdir): New variable.
	(SWARMBUILDLDFLAGS): Use it.

	* Makefile.common.in (JAVASWARMLIBS): Substitute.
	(SWARMLIBS): Use it.

1999-04-25  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (libobjcdir): New variable to find the libobjc
	build directory.
	(SWARMBUILDLDFLAGS): Use it.

1999-04-25  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* config.swarm.in (JAVA_CLASSES_INSTALLED_AS): New substitution.

1999-04-25  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (INCLUDES): Add include for src/gui directory,
	for gui.h header file (needed by space library).

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (JAVACMD, JAVAENV): New substitutions.

1999-04-20  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (SWARMBUILDLDFLAGS): Remove extra .libs
	subdirectory references, libtool now appends these internally.

1999-04-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (JAVA): Single quote substitution to avoid
	expansion of LD_LIBRARY_PATH.

1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (JAVACLASSES, JAVALIBS, JAVA): Substitute.

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config.swarm.in (swarm_datadir, jdkdir): Substitute.

1999-03-16  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in (swarm_OBJCLIBS): Don't substitute (use local
	-lobjc).
